--- a/tier/index.html
+++ b/tier/index.html
@@ -135,7 +135,7 @@
 			</div>
 		</div>
 	</div>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script src="http://pxdn.cloud/jq/jquery1.11.1.min.js"></script>
 	<script src="dragula.min.js"></script>
 	<script src="html2canvas.js"></script>
 	<script>
