--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 	<main>
 		<h1>A place to test new projects.</h1>
 		<ul class="sitelist">
-			<li><a href="https://judahcr.github.io/bracket">bracket</a></li>
-			<li><a href="https://judahcr.github.io/tier">tier list creator</a></li>
+			<li><a href="/tier">tier list creator</a></li>
 		</ul>
 		<span class="line"></span>
 		<span class="subtitle"><a href="http://0px.moe">main site</a></span>
