migrated favicon to cdn

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>0px Workbench</title>
+	<link rel="icon" href="https://assets.pxdn.cloud/ico/favicon.ico" type="image/x-icon">
 </head>
 <body>
 	<style type="text/css">
