--- a/tier/index.html
+++ b/tier/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
 <head>
-	<link rel="icon" type="image/x-icon" href= "../favicon.ico"/>
 	<title>0px Tier List Creator</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,100italic,700" rel="stylesheet" type="text/css">
+	<link rel="icon" type="image/x-icon" href= "https://assets.pxdn.cloud/ico/favicon.ico">
 	<link href="newstyle.css" rel="stylesheet">
 	<link href="dragula.min.css" rel="stylesheet">
 	<link rel="author" href="http://0px.moe" />
