--- a/tier/index.html
+++ b/tier/index.html
@@ -15,7 +15,7 @@
 <body>
 	<nav class="controlList">
 		<div id="controls">
-			<h1 style="text-transform: none;"><a style="color: inherit;" href="http://0px.moe">0px</a> TIER LIST CREATOR</h1>
+			<h1 style="text-transform: none;"><a style="color: inherit;" href="http://0px.moe">0px</a> TIER LIST CREATOR <baby>v2.3</baby></h1>
 			<div id="buttons">
 				<button id="screenshot">Share & Import</button>
 				<button id="game">Change Game</button>
