--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>0px Workbench</title>
-	<link rel="icon" href="https://assets.pxdn.cloud/ico/favicon.ico" type="image/x-icon">
+	<title>testificate</title>
+	<!--<link rel="icon" href="https://assets.pxdn.cloud/ico/favicon.ico" type="image/x-icon">!-->
 </head>
 <body>
 	<style type="text/css">
@@ -16,12 +16,12 @@
 		.line { background-image: linear-gradient(10deg, #242424, #fff); width: 40%; height: 1px; display: block; margin-bottom: 10px; }
 	</style>
 	<main>
-		<h1>A place to test new projects.</h1>
+		<h1>testing</h1>
 		<ul class="sitelist">
 			<li><a href="/tier">tier list creator</a></li>
 		</ul>
 		<span class="line"></span>
-		<span class="subtitle"><a href="http://0px.moe">main site</a></span>
+		<!--<span class="subtitle"><a href="asdasd">main site</a></span>!-->
 	</main>
 </body>
 </html>
