--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<main>
 		<h1>testing</h1>
 		<ul class="sitelist">
-			<li><a href="/tier/index.html">tier list creator</a></li>
+			<li><a href="/tiergen/tier">tier list creator</a></li>
 		</ul>
 		<span class="line"></span>
 		<!--<span class="subtitle"><a href="asdasd">main site</a></span>!-->
