--- a/tier/index.html
+++ b/tier/index.html
@@ -1,21 +1,21 @@
 <html>
 <!doctype html>
 <head>
-	<title>0px Tier List Creator</title>
+	<title>Open Tier List Creator</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,100italic,700" rel="stylesheet" type="text/css">
-	<link rel="icon" type="image/x-icon" href= "https://assets.pxdn.cloud/ico/favicon.ico">
+	<!--<link rel="icon" type="image/x-icon" href= "https://assets.pxdn.cloud/ico/favicon.ico">!-->
 	<link href="newstyle.css" rel="stylesheet">
 	<link href="dragula.min.css" rel="stylesheet">
 	<link rel="author" href="http://0px.moe" />
 	<meta charset="utf-8"/>
 	<meta content='width=device-width, initial-scale=1' name='viewport'/>
-	<meta name="description" content="Create tier lists for your favorite games! Smash, Guilty Gear, Street Fighter, and more!"/>
-	<meta name="keywords" content="tier list creator, tier list, tier list maker, esports, gaming, games, fighting games, big anime tiddies, so big it's scary, like way too big">
+	<meta name="description" content="Create tier lists for your favorite characters"/>
+	<meta name="keywords" content="tier list creator, tier list, tier list maker,">
 </head>
 <body>
 	<nav class="controlList">
 		<div id="controls">
-			<h1 style="text-transform: none;"><a style="color: inherit;" href="http://0px.moe">0px</a> TIER LIST CREATOR <baby>v2.3</baby></h1>
+			<h1 style="text-transform: none;">OPEN TIER LIST CREATOR <baby>v0.0</baby></h1>
 			<div id="buttons">
 				<button id="screenshot">Share & Import</button>
 				<button id="game">Change Game</button>
@@ -86,7 +86,7 @@
 				<h1>CHANGE GAME</h1>
 				<span id="close"></span>
 				<div id="switchButtons">
-				<!-- SMASH -->
+				<!-- get outta here
 					<button id="switch64">Super Smash Bros. 64</button>
 					<button id="switchMelee">Super Smash Bros. Melee</button>
 					<button id="switchBrawl">Super Smash Bros. Brawl</button>
@@ -96,15 +96,13 @@
 					<button id="switchBrawlMinus">Brawl Minus</button>
 					<button id="switchBrawlZeus">Brawl Zeus</button>
 					<button id="switchPokken">Pokkén Tournament</button><br>
-				<!-- FIGHTING -->
-					<!-- <button id="switchDBFZ">Dragon Ball FighterZ</button> THE IMAGES SUCK FOR THIS SO IT'S DISABLED FOR NOW-->
 					<button id="switchSFV">Street Fighter V</button>
 					<button id="switch3S">Street Fighter III: 3rd Strike</button>
 					<button id="switchGGREV">Guilty Gear Xrd Revelator & REV2</button>
 					<button id="switchP4AU">Persona 4 Arena Ultimax</button>
 					<button id="switchBrawlhalla">Brawlhalla</button><br>
-<!-- 					<button id="switchSmash4">Super Smash Bros. 4 (Screenshots)</button> -->
-				<!-- OTHER -->
+                 			<button id="switchSmash4">Super Smash Bros. 4 (Screenshots)</button>
+				-->
 					<button id="switchOW">Overwatch</button>
 				</div>
 				<p>Changing your game <strong>will</strong> empty your tier list! You cannot undo this.</p>
@@ -127,12 +125,7 @@
 				</p>
 				<h1>ABOUT</h1>
 				<span id="close"></span>
-				<p>This is a new and maintained version of the original Smash Tier List Maker created<baby>(?)</baby> by <a href="https://github.com/quetzle">Quetzle</a>. 
-					I used to have my own fork of this project a long time ago, but due to hosting trouble and lack of version control, I lost it. But now it's back... with version control! 
-				</p>
-				<p>For updates and changelogs, <a href="http://blog.0px.moe">check out my blog</a>.<br>
-				If you want to contact me, send an email to <a href="mailto:judah@0px.moe">judah@0px.moe</a> or tweet <a href="https://twitter.com/kyotoshift">@kyotoshift</a>.
-				</p>
+				<p>Character tier list creater forked off 0px, who forked it off <a href="https://github.com/quetzle">Quetzle</a>. 
 			</div>
 			<div id="screenshotShow">
 				<span id="close"></span>
